--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,21 +67,28 @@
     <Compile Include="Assets\Scripts\Dice\HeldDice.cs" />
     <Compile Include="Assets\Scripts\Dice\RandomNumber.cs" />
     <Compile Include="Assets\Scripts\Enemies\AggroGoblin.cs" />
-    <Compile Include="Assets\Scripts\Enemies\DiceSniffer.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyBaseMovement.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyFocusSwitch.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyStatus.cs" />
     <Compile Include="Assets\Scripts\Enemies\GoblinBombDelay.cs" />
+    <Compile Include="Assets\Scripts\Enemies\HatRoofBlocker.cs" />
     <Compile Include="Assets\Scripts\Enemies\Parascope.cs" />
-    <Compile Include="Assets\Scripts\Enemies\new\EnemyHealthAndStatus.cs" />
+    <Compile Include="Assets\Scripts\Enemies\new\DamageSensor.cs" />
+    <Compile Include="Assets\Scripts\Enemies\new\DeathProjectile.cs" />
+    <Compile Include="Assets\Scripts\Enemies\new\EnemyFlightWanderMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemies\new\EnemyFootFloorDetector.cs" />
+    <Compile Include="Assets\Scripts\Enemies\new\EnemyHandBoundaryDetector.cs" />
     <Compile Include="Assets\Scripts\Enemies\new\EnemyNodeDetection.cs" />
     <Compile Include="Assets\Scripts\Enemies\new\EnemyTrackFlight.cs" />
     <Compile Include="Assets\Scripts\Enemies\new\EnemyTrackMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemies\new\WalkingEnemyMovement.cs" />
+    <Compile Include="Assets\Scripts\Game Session\Checkpoint\Checkpoint.cs" />
     <Compile Include="Assets\Scripts\Game Session\GameSession.cs" />
     <Compile Include="Assets\Scripts\Game Session\TransitionScene.cs" />
     <Compile Include="Assets\Scripts\Input\Sample Sidescroll Input\SideScrollInput.cs" />
     <Compile Include="Assets\Scripts\Interactable Objects\Doors.cs" />
     <Compile Include="Assets\Scripts\Interactable Objects\Interactables.cs" />
+    <Compile Include="Assets\Scripts\Ladders and Steps\ClipPlatformDrop.cs" />
     <Compile Include="Assets\Scripts\Objects\ObjectParticle.cs" />
     <Compile Include="Assets\Scripts\Objects\ObjectStatus.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\PacerNodes.cs" />
@@ -98,6 +105,7 @@
     <Compile Include="Assets\Scripts\Saving and Loading Json\JsonSavingSystem.cs" />
     <Compile Include="Assets\Scripts\Saving and Loading Json\JsonStrategy.cs" />
     <Compile Include="Assets\Scripts\Saving and Loading Json\SavingStrategy.cs" />
+    <Compile Include="Assets\Scripts\Saving and Loading Json\SavingWrapper.cs" />
     <Compile Include="Assets\Scripts\Saving and Loading Json\XorTextStrategy.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\Character Abilities\CatchTongue.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\Character Abilities\DaGun.cs" />
@@ -120,6 +128,7 @@
     <Compile Include="Assets\Scripts\Side Scroll Character\Dice Mechanics\old dice systems\DiceHolder.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\Dice Mechanics\old dice systems\NumberCaster.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\PersistentPlayer.cs" />
+    <Compile Include="Assets\Scripts\Side Scroll Character\PitHazardResponse.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\PlayerAnimator.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\PlayerSideScrollControls.cs" />
@@ -129,6 +138,8 @@
     <Compile Include="Assets\Scripts\Side Scroll Character\TestMovementControlls.cs" />
     <Compile Include="Assets\Scripts\Side Scroll Character\UIManagement.cs" />
     <Compile Include="Assets\Scripts\Spells\SpellScriptableObject.cs" />
+    <Compile Include="Assets\Scripts\UI\Menus\CircleTransitionAnimation.cs" />
+    <Compile Include="Assets\Scripts\UI\Menus\CutOutMaskUI.cs" />
     <Compile Include="Assets\Scripts\UI\Menus\MenuManager.cs" />
     <Compile Include="Assets\Scripts\UI\Menus\TitleMenu.cs" />
     <Compile Include="Assets\Scripts\UI\Player\AmmoSlotData.cs" />
